--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Efrand Grandy Alvanfi</title>
+    <title>efrand</title>
   </head>
   <body>
-    <h1>Efrand Grandy Alvanfi</h1>
+    <h1>efrand</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
